--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.15.0",
     "nodemon": "^3.1.10",
     "pug": "^3.0.3"
