--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE="mongodb+srv://username:password@cluster0.uq88hfi.mongodb.net/db-name"
 JWT_SECRET="Day la 1 chuoi ngau nhien"
+EMAIL_USER="email@gmail.com"
+EMAIL_PASS="App password"
