--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pug": "^3.0.3"
   }
