--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "mongoose-slug-updater": "^3.3.0",
     "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pug": "^3.0.3"
